--- a/Prep2PlateMVC/Prep2PlateMVC.csproj
+++ b/Prep2PlateMVC/Prep2PlateMVC.csproj
@@ -166,6 +166,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Prep2Plate.mdf" />
+    <Content Include="App_Data\Prep2Plate_log.ldf">
+      <DependentUpon>Prep2Plate.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -205,7 +209,6 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
