--- a/Prep2PlateMVC/Web.config
+++ b/Prep2PlateMVC/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="Prep2PlateConnectionString"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Prep2Plate.mdf;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
